Fix extra scrollbar in IE

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -10,7 +10,7 @@
 
 #content-main
   display: none
-  overflow: auto
+  overflow: hidden
 
   &.visible
     display: block
